# Clasificacion_Biomedica

./: .dockerignore  .flake8  .gitignore  README.md  app.py  docker-compose.yml  nginx.conf  package.json  pyproject.toml  requirements.txt  setup.bat  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  start-scripts.bat
backend/: Dockerfile  improved_medical_bert.py  main.py  requirements.txt
config/: settings.py
frontend/: .dockerignore  Dockerfile
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/rendimiento/: page.tsx
frontend/app/upload/: page.tsx
frontend/public/evidencias/: README.md
models/: metrics.json  tokenizer.json
models/trained_model/: config.json
notebooks/: Medical.ipynb  Medical_Classification_Analysis.ipynb
scripts/: __init__.py  __main__.py  data_processing.py  evaluation_utils.py  model_utils.py  requirements.txt  text_augmentation.py  training_utils.py  visualization.py
